[tool.poetry]
name = "radarr-selector"
version = "0.1.0"
description = ""
authors = ["Jan Willhaus <mail@janwillhaus.de>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.3"
requests = "^2.23.0"
numpy = "^1.18.2"
logzero = "^1.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
